Kai add sport day activity

--- a/activities.html
+++ b/activities.html
@@ -11,6 +11,7 @@
 <p id="Nano Activities"> Nano Activities </p>
 
 <p id="Kai Activities"> Kai Activities </p>
+<p> Sport Day at CSTU </p>
 
 </body>
 </html>
