Nano add sport day activity

--- a/activities.html
+++ b/activities.html
@@ -9,6 +9,7 @@
 <h2>This is our activities: </h2>
 
 <p id="Nano Activities"> Nano Activities </p>
+<p> Sport Day at CSTU </p>
 
 <p id="Kai Activities"> Kai Activities </p>
 
