Kai update activity list

--- a/activities.html
+++ b/activities.html
@@ -12,7 +12,10 @@
 <p> Sport Day at CSTU </p>
 
 <p id="Kai Activities"> Kai Activities </p>
-<p> Sport Day at CSTU </p>
+<ul>
+  <li> Sport Day </li>
+  <li> Git Workshop </li>
+</ul>
 
 </body>
 </html>
