Nano update activity list

--- a/activities.html
+++ b/activities.html
@@ -9,7 +9,9 @@
 <h2>This is our activities: </h2>
 
 <p id="Nano Activities"> Nano Activities </p>
-<p> Sport Day at CSTU </p>
+<ul>
+   <li> Sport Day at CSTU </li> 
+</ul>
 
 <p id="Kai Activities"> Kai Activities </p>
 <p> Sport Day at CSTU </p>
