Kai updates Nano activity

--- a/activities.html
+++ b/activities.html
@@ -11,6 +11,7 @@
 <p id="Nano Activities"> Nano Activities </p>
 <ul>
    <li> Sport Day at CSTU </li> 
+   <li> This is what Kai added </li>
 </ul>
 
 <p id="Kai Activities"> Kai Activities </p>
